--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-	"prefix": "$",
-	"token": "NzA5ODkwNzY0NDE4ODQyNjI1.Xrsfyg.o3R6UhZJTBQq4g3hkwK91khgTas"
+	"prefix": "<>",
+	"token": "NzQ0MTk5OTIzNTk0OTUyNzM1.XzfwMA.7dQTeU53xcLxVfJM3R3cxdTHUFE"
 }
