--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,12 @@ services:
     ports:
       - "8123"
     volumes:
-      - ~:/home/node/files
+      - flag_files:/home/node/files
+    volumes:
+      - type: volume
+        source: flag_files
+        target: /home/node/files
     restart: unless-stopped
+
+volumes:
+  flag_files:
