--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - "8123"
     volumes:
-      - flag_files:/home/node/files
+      - flagFiles:/home/node/files
     volumes:
       - type: volume
         source: flag_files
@@ -18,4 +18,4 @@ services:
     restart: unless-stopped
 
 volumes:
-  flag_files:
+  flagFiles:
