--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,9 @@ services:
       context: .
     ports:
       - "8123"
-    volumes:
-      - myapp:/home/node/files
+#    volumes:
+#      - myapp:/home/node/files
     restart: unless-stopped
    
-volumes:
-  myapp:
+#volumes:
+#  myapp:
